--- a/app/src/main/res/layout/activity_rentel.xml
+++ b/app/src/main/res/layout/activity_rentel.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical"
     tools:context=".RentelActivity">
 
+    <!--<WebView-->
+        <!--android:id="@+id/webView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentTop="true" />-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
