--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,37 +6,16 @@
     android:orientation="vertical"
     tools:context=".Fragment.ProfileFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/dark"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.33"
-            android:text="@string/dark_theme" />
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/light"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.33"
-            android:text="@string/light_theme" />
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/custom"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.33"
-            android:text="@string/custom_theme" />
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/about"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </FrameLayout>
+        <FrameLayout
+            android:id="@+id/about"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </FrameLayout>
+
+    </ScrollView>
 </LinearLayout>
